feat: rank cache
